@@ -197,3 +197,5 @@ T_349h264_interlaced_default_duration:7e80cf1649489adf8f65a7dc8cef7387-8dd834ba2
 T_350h264_progressive_default_duration:6e80e56352345217447d9e494f3793a3-a6d64d1cf4762f47dedcdb03b07a5c73-0961a58dc05a5af0d46b433efde4c3df:passed:20120307-193604:3.625267135
 T_351h264_vfr_with_timecode_file:0897f0620791eab02fe2741ba1d2fa5f-6312f82b4a760026ea5ae8fc9ae48b4a:passed:20120307-200246:5.695599458
 T_352timecode_scale_auto_libmatroska_assert:a88275bb9d14d8d6fcdf59a7db271750:passed:20120308-083800:1.455932833
+T_353ac3-from-ts-with-missing-tcs-with-non-zero-first-tc::new:20120312-134345:0.0
+T_353ac3_from_ts_with_missing_tcs_with_non_zero_first_tc:cd895e8b406108f0568ed4495440ac28:passed:20120312-134456:0.86805827
