@@ -1,3 +1,9 @@
+2012-03-12  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed timecode calculation for (E)AC3 tracks
+	if the source container (e.g. MPEG transport streams) only
+	provided timecodes for some of the (E)AC3 packets itself.
+
 2012-03-10  Moritz Bunkus  <moritz@bunkus.org>
 
 	* Released v5.4.0.
